# text-highlighter

./: README.md  docker-compose.yml  highlighting[4176].md  main.yml
.github/workflows/: test.yml
app/: Dockerfile  index.html  server.js
backend/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/api/: Settings.py  main.py  text_enhancer.py
backend/api/lib/: reuters.txt  test.txt
backend/api/utils/: utils.py
backend/tests/: test_utils.py
frontend/: package-lock.json
frontend/app/: page.tsx
instructions/: onboarding[4175].md
