[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Dependency manager for backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
openai = "^1.6.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
#Linter and formatter
flake8 = "^7.0.0"
autopep8 = "^2.0.4"
ruff = "^0.1.11"
isort = "^5.13.2"
pyright = "^1.1.345"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
combine-as-imports = true

[tool.isort]
profile = "black"
